Fix layout in TripInfo component
* This fixes the bug where the "Tillbaka" button was not visible on small screens (mobile)

--- a/client/src/styles/generalStyles.css
+++ b/client/src/styles/generalStyles.css
@@ -24,6 +24,8 @@
   overflow-y: auto;
   overflow-x: hidden;
   /* width: 75%; */
+  align-items: stretch;
+  min-width: 300px;
 }
 
 .flexSpaceEven {
@@ -82,6 +84,14 @@
   justify-content: "center";
   align-items: "center";
   margin-top: 10px;
+}
+
+.buttonRowSpaceBetween{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  align-items: stretch;
+  flex: 1;
 }
 
 @media only screen and (max-width: 450px) {
